# mcp-plesk-dev-docs

./: .dockerignore  .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTEXT.md  CONTRIBUTING.md  Dockerfile  GEMINI.md  README.md  REASONIX.md  SECURITY.md  benchmark_output.txt  create_issues.sh  debug_prompt.py  fastmcp.json  gppjqka0irmqlqnqtmlp5nm4icipihnb  i2.json  i3.json  i4.json  i5.json  i6.json  i7.json  inspect_db.py  install.ps1  install.sh  manifest  pyproject.toml  pyrightconfig.json  run_tests.sh  server.json  set_deps.sh  setup_wsl.sh  srbk97tjserckpajvcnpqemn0rtd7tgg.darc  test_mock.py  uicqfrf2a4fs4hsubofruhqnenvv5mnt.darc  verify_refresh.py
.beads/: config.yaml  issues.jsonl  metadata.json
.beads/doc_sync/: changelog.bead  gemini.bead  readme.bead  roadmap.bead  state.bead
.beads/hooks/: pre-commit  pre-push
.github/: copilot-instructions.md  copilot-instructions.original.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/skills/best-practices/: .skill-meta.json  SKILL.md
.github/skills/coding-guidelines/: .skill-meta.json
.github/skills/docs-writer/: .skill-meta.json
.github/skills/security-best-practices/: .skill-meta.json
.github/skills/security-best-practices/references/: javascript-typescript-react-web-frontend-security.md
.github/skills/technical-design-doc-creator/: .skill-meta.json
.github/skills/tlc-spec-driven/: .skill-meta.json  README.md
.github/workflows/: benchmark-regression.yml  docs-drift.yml  publish.yml  tests.yml
.specs/features/enterprise-ai-infrastructure/: design.md  spec.md  tasks.md
.specs/features/retrieval-quality-optimization/: design.md  spec.md  tasks.md
.specs/features/sota-retrieval-roadmap/: design.md  spec.md  tasks.md
.specs/project/: PROJECT.md  ROADMAP.md  STATE.md
benchmarks/: current_capture.json
benchmarks/baselines/: control-local.json  control-medium.json  control-medium.json.bak  control-pro.json  control.json  light.json
benchmarks/gates/: default.json
benchmarks/suites/: control.json  long-doc.json  multi-hop.json  structural.json
docs/: benchmarks.md  mcp-components.md  release-2026-04-20-document-aware-retrieval.md  turboquant.md
docs/agents/: issue-tracker.md
mcp_plesk_dev_docs/: __init__.py  benchmark_reporting.py  benchmark_runner.py  benchmark_suites.py  log_handler.py  platform_utils.py  settings.py
mcp_plesk_dev_docs/application/services/: container.py  health_service.py  indexing_service.py  profile_service.py  search_service.py  warmup_service.py
mcp_plesk_dev_docs/config/: sources.py
mcp_plesk_dev_docs/domain/: models.py
mcp_plesk_dev_docs/formatting/: search_formatter.py  toc_formatter.py
mcp_plesk_dev_docs/infrastructure/parsers/: chunking.py  html_utils.py  processor_registry.py
mcp_plesk_dev_docs/infrastructure/repositories/: lancedb_repository.py  protocols.py  source_state_repository.py  summary_cache_repository.py  turboquant_repository.py
mcp_plesk_dev_docs/infrastructure/runtime/: model_runtime.py  storage_runtime.py
mcp_plesk_dev_docs/infrastructure/sources/: acquisition.py  discovery.py
mcp_plesk_dev_docs/server/: __init__.py  __main__.py  bootstrap.py  error_handling.py  lifecycle.py  lock.py  main.py  mcp_app.py
mcp_plesk_dev_docs/server/prompts/: prompt_templates.py
mcp_plesk_dev_docs/server/resources/: toc_resource.py
mcp_plesk_dev_docs/server/tools/: __init__.py  admin_tools.py  indexing_tools.py  search_tools.py
plesk_unified/: ai_client.py  benchmark_engines.py  benchmark_gates.py  benchmark_runner.py  benchmark_suites.py  chunking.py  error_handling.py  html_utils.py  indexing.py  io_utils.py  legacy_server.py  log_handler.py  model_config.py  platform_utils.py  server.py  settings.py  summary_cache.py  tq_index.py  types.py
plesk_unified/application/services/: container.py  health_service.py  indexing_service.py  search_service.py  warmup_service.py
plesk_unified/config/: sources.py
plesk_unified/domain/: models.py
plesk_unified/formatting/: toc_formatter.py
plesk_unified/infrastructure/parsers/: processor_registry.py
plesk_unified/infrastructure/repositories/: lancedb_repository.py  source_state_repository.py  summary_cache_repository.py  turboquant_repository.py
plesk_unified/infrastructure/runtime/: model_runtime.py  storage_runtime.py
plesk_unified/server/: __init__.py  __main__.py  bootstrap.py  lifecycle.py  lock.py  main.py  mcp_app.py
plesk_unified/server/prompts/: __init__.py  prompt_templates.py
plesk_unified/server/resources/: __init__.py  toc_resource.py
plesk_unified/server/tools/: __init__.py  admin_tools.py  indexing_tools.py  search_tools.py
plesk_unified/turboquant/: compressors.py  lloyd_max.py  turboquant.py
scripts/: backfill_summary_cache.py  benchmark_profiles.py  enrich_html_toc.py  enrich_toc.py  generate_virtual_toc.py
tests/: test_ai_client.py  test_async_tools.py  test_benchmark_engines.py  test_benchmark_gates.py  test_chunking.py  test_error_handling.py  test_html_utils.py  test_indexing.py  test_io_utils.py  test_log_handler.py  test_model_config.py  test_progress.py  test_prompts.py  test_resources.py  test_sampling.py  test_search_helpers.py  test_server.py  test_settings.py  test_sota_ph1.py  test_startup_path.py  test_turboquant_regression.py
tonbistudio-turboquant-pytorch/: LICENSE  __init__.py  turboquant.py
