[build-system]
requires = ["setuptools>=70.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "plesk-unified"
version = "0.4.2"
description = "A unified MCP server that indexes and retrieves Plesk documentation using vector embeddings and semantic search with reranking"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Gilson Siqueira", email = "gilson@example.com"}
]
keywords = ["plesk", "mcp", "model-context-protocol", "semantic-search", "rag", "vector-database"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Documentation",
    "Topic :: System :: Monitoring",
    "Topic :: Utilities",
]
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "fastmcp>=3.2.4",
    "lancedb>=0.29.1",
    "pylance>=0.23.0",
    "numpy>=1.26.0",  # used directly in server.py, tq_index.py, and scripts
    "psutil>=6.1.1",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.1",
    "sentence-transformers>=5.2.2",
    "torch>=2.4.0",
    "markdownify>=0.14.1",
    "tantivy>=0.22.0",
    "lance-namespace==0.6.1",
]

[project.urls]
Homepage = "https://github.com/barateza/mcp-plesk-unified"
Documentation = "https://github.com/barateza/mcp-plesk-unified#readme"
Repository = "https://github.com/barateza/mcp-plesk-unified.git"
"Bug Tracker" = "https://github.com/barateza/mcp-plesk-unified/issues"

[tool.setuptools]
packages = ["plesk_unified", "plesk_unified.turboquant"]

[project.scripts]
# Console script to run the MCP server
plesk-unified-mcp = "plesk_unified.server:main"

[project.optional-dependencies]
# Note: torch is already a dependency of sentence-transformers
# For GPU support, install PyTorch with CUDA from https://pytorch.org/
# The server will automatically detect and use GPU acceleration if available.
dev = [
    "pytest>=8.0.0",
    "requests>=2.32.0",
    "ruff>=0.3.0",
    "pre-commit>=3.6.0",
]
test = [
    "pytest>=8.0.0",
]
tools = [
    "requests>=2.32.0",
]

# --- NEW CONFIGURATION BELOW ---

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu124", marker = "sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu124", marker = "sys_platform == 'win32'" },
]
torchaudio = [
  { index = "pytorch-cu124", marker = "sys_platform == 'win32'" },
]

[tool.ruff]
line-length = 88
# Core runtime settings remain at top-level. Linter-specific selection
# options live under the `lint` table per ruff newer config layout.

[tool.ruff.lint]
select = ["E", "F", "W", "TC", "B", "B9", "PLR", "C4"]
extend-ignore = ["E203", "PLR2004"]
extend-select = []

[tool.ruff.lint.pylint]
max-args = 6
max-statements = 50

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["PLR", "C4"]
"scripts/*" = ["PLR"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[dependency-groups]
dev = [
    "pytest-asyncio>=1.3.0",
]
